--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,9 @@ name: .NET
 on:
   [push, pull_request]
 
+permissions:
+  contents: read # access to check out code and install dependencies
+
 jobs:
   build:
 
@@ -17,6 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+        cache: true
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
