Added github action to do cached .Net build
Replaced references to local Valheim game with reference assemblies from package Digitalroot.Valheim.Common.References
Updated target framework to net48
Added github action to do cached .Net build

--- a/ShowPlantProgress.csproj
+++ b/ShowPlantProgress.csproj
@@ -1,16 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <AssemblyName>ShowPlantProgress</AssemblyName>
     <Product>Show Plant Progress</Product>
-    <Version>1.5.2</Version>
+    <Version>1.5.3</Version>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
-      https://nuget.bepinex.dev/v3/index.json;
-      https://nuget.samboy.dev/v3/index.json
+      https://nuget.bepinex.dev/v3/index.json
     </RestoreAdditionalProjectSources>
     <RootNamespace>ShowPlantProgress</RootNamespace>
     <Copyright>Copyright © 2025  KompjoeFriek</Copyright>
@@ -18,20 +17,20 @@
     <RepositoryUrl>https://github.com/kompjoefriek/ShowPlantProgress</RepositoryUrl>
     <PackageTags>mod;valheim</PackageTags>
     <PackageIcon>icon.png</PackageIcon>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="Digitalroot.Valheim.Common.References" Version="0.219.14" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.17" IncludeAssets="compile" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
   </ItemGroup>
-
-  <Import Project="$(SolutionDir)\valheim.targets" />
 
   <ItemGroup>
     <None Update="README.md">
