--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,10 +1,17 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+# Just build .NET project when a source file or project file is changed
+
+
+name: Verify
 
 on:
-  [push, pull_request]
+  push:
+  pull_request:
+    paths:
+    - '**.cs'
+    - '**.csproj'
 
 permissions:
   contents: read # access to check out code and install dependencies
