Only trigger verify action when code or project changed

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,7 +8,14 @@ name: Verify
 
 on:
   push:
+    branches:
+    - '**'
+    paths:
+    - '**.cs'
+    - '**.csproj'
   pull_request:
+    branches:
+    - '**'
     paths:
     - '**.cs'
     - '**.csproj'
