--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,21 +22,27 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Get versions
+    - name: Read files into Github Output
+      id: read-files
       run: |
-        echo "Github tag = ${{ github.ref_name }}"
-        package_content=`cat thunderstore/manifest.json`
-        manifest_version=v${{fromJson($package_content).version_number}}
+        echo "manifest-thunderstore=`cat thunderstore/manifest.json` >> "$GITHUB_OUTPUT"
+      
+    - name: Get version manifest thunderstore
+      run: |
+        manifest_version=v${{fromJson(steps.read-files.outputs.manifest-thunderstore).version_number}}
         echo "Manifest version = $manifest_version"
-        echo "MANIFECT_VERSION=$manifest_version" >> $GITHUB_ENV
+        echo "MANIFEST_VERSION=$manifest_version" >> $GITHUB_ENV
+
+    - name: Get version project
+      run: |
         project_version=v$(cat ${{ env.MOD_NAME }}.csproj | grep -Po '(?<=Version>)[\d\.]+(?=</Version>)')
         echo "Project version = $project_version"
         echo "PROJECT_VERSION=$project_version" >> $GITHUB_ENV
 
-    - name: Version check manifest
-      if: ${{ github.ref_name != env.MANIFECT_VERSION }}
+    - name: Check version manifest thunderstore
+      if: ${{ github.ref_name != env.MANIFEST_VERSION }}
       run: | 
-        echo "Manifest version does not match tag version! ${{ github.ref_name }} != ${{ env.MANIFECT_VERSION }}"
+        echo "Manifest version does not match tag version! ${{ github.ref_name }} != ${{ env.MANIFEST_VERSION }}"
         exit 1
 
     - name: Version check project
@@ -98,7 +104,7 @@ jobs:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
         body: "Changes:\n${{ steps.changelog.outputs.changelog }}"
-        draft: false
+        draft: true
         prerelease: false
 
     - name: Upload Release Asset
